--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link href="styles.css" rel="stylesheet" />
   <meta charset="utf-8">
   <title>ProyectoIntegradoAngularWebEmpresas</title>
   <base href="/">
