--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <link href="styles.css" rel="stylesheet" />
   <meta charset="utf-8">
   <title>ProyectoIntegradoAngularWebEmpresas</title>
-  <base href="/">
+  <base href="login">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
