--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-
   <meta charset="utf-8">
-  <title>Doors n Corners</title>
+  <title>Doors n' Corners</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -16,7 +15,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="height: 100%;">
   <app-root></app-root>
 </body>
 </html>
