--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #000000;">
 <head>
   <meta charset="utf-8">
   <title>Doors n' Corners</title>
@@ -16,6 +16,9 @@
 
 </head>
 <body class="mat-typography" style="height: 100%;">
-  <app-root></app-root>
+
+  <div style="height: 100%; background: linear-gradient(0deg, rgba(16,157,231,1) 0%, rgba(0,0,0,1) 80%); ">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
